On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -103,8 +103,14 @@ dist
 # TernJS port file
 .tern-port
 
+# Package folders
 node_modules/
 scripts/
 
+# Package files
 yarn.lock
 package-lock.json
+
+# Replit
+.replit
+replit.nix
